[tool.poetry]
name = "python-sdk"
version = "0.1.0"
description = ""
authors = ["Tevon <tevon@bruinen.co>"]
readme = "README.md"
packages = [{include = "python_sdk"}]

[tool.poetry.dependencies]
python = "^3.11"
bruinen-openapi-gen = {git = "https://github.com/bruinenxyz/openapi-python-client.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
